--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+:root{
+    --var-primary-color-100:rgb(62,28,0);
+    --var-primary-colo-102:rgb(73,34,1);
+    --var-primary-color-103:rgb(86,43,0);
+    --var-primary-color-104:rgb(99,50,0);
+    --var-primary-color-105:rgb(232, 174, 119);
+
+
+}
 body,html{
     padding:0;
     margin:0;
@@ -5,21 +17,32 @@ body,html{
 body{background-color: beige;
 }
 header{
-    background-color: aquamarine;
+    background-color:var(--var-primary-color-100);
     display:flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+  flex-direction: column;
+  color: aliceblue;
 }
 nav{
+width:100%;
+justify-self: center;
+display:flex;
+justify-content: center;
+border-radius: 3rem;;
+background-color: var(--var-primary-color-103);
 
 }
 h1{
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    
+  
 
 }
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
 
+}
     
 
 article{
@@ -43,19 +66,20 @@ p{
     margin:0;
 }
 
+
 a .title{
     cursor: pointer;
   float: right;
-  background-color: blue;
+  
   margin: 1.25rem 0.6rem 0.6rem 0.6rem;
   border-radius: 5px;
   border: none;
   padding: 0.6rem 1rem;
-  color: white;
+  color:
   position: relative;
 }
  .title:hover{
-    background-color: white;
+    background-color: var(--var-primary-color-105)
     
 }
  .title span {
@@ -68,6 +92,7 @@ a .title{
 
 a.title span:after{
     content: '\032C';
+    font-size: 5rem;;
 
     opacity: 0;
    
@@ -88,10 +113,16 @@ a.title span:after{
 }
 .show{
       display:none;  
-    color: brown;
 }
-p{
-    font-style: italic;
-    text-align: start;
-    padding-bottom: 4rem;
+button{
+    border-radius: 2rem;
+    background-color: linear-gradient(30deg, --var-primary-color-105, rgb(192, 150, 150));
+    font-family: Arial, Helvetica, sans-serif;
+    cursor:pointer;
+    font-size: 1rem;
+}
+.arrow{
+    font-size: 8rem;
+ 
+    
 }
