--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* GENERAL SETTINGS */
 *{
     font-family: Arial, Helvetica, sans-serif;
   
@@ -16,54 +17,35 @@ body,html{
     margin:0;
     height:100%;
 }
-body{background-color: beige;
+body{background-color: beige;}
+    h1{margin:0;
+    padding-bottom:3rem;
+
 }
+
+/* HEADER */
 header{
     background-color:var(--var-primary-color-100);
     display:flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
   flex-direction: column;
   color: aliceblue;
   
+} .arrow{
+    padding:0;
 }
+
 nav{
 width:100%;
 justify-self: center;
 display:flex;
 justify-content: center;
-border-radius: 3rem;;
+border-radius: 1px;
 background-color: var(--var-primary-color-103);
 
-}
-h1{margin:0;
-    padding-bottom:3rem;
 
 }
-h2{
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: italic;
-    padding-bottom:9rem;
-   
-
-}
-    
-
-article{
-    background-color: black;
-}
-
-
-
-
-
-
-
-
- .explore{
-    padding:0;
-}
-
 
 
  .explore{
@@ -75,20 +57,22 @@ article{
    padding: 0.6rem 1rem; 
   color:white;
  padding-top:3rem; 
+ display:inline-block;
+ overflow-y: visible;
 }
- .explore:hover{
+ .arrow:hover{
    padding-top: 0;
-    background-color: var(--var-primary-color-105)
-    }
- .explore span {
+    background-color: var(--var-primary-color-105);
+    cursor: pointer;
+}
+ .arrow{
     color: white;
-  cursor: pointer;
+  ;
    display: inline-block;
   position: relative; 
-  transition: 1s;
-}
+  transition: 1s;}
 
-.explore span:after{
+.arrow:after{
     content: '\032C';
     font-size:2rem;;
 padding-right: 3rem;
@@ -97,31 +81,74 @@ padding-right: 3rem;
     bottom: -0.1rem;
     transition: 1s;
     color: white;
-
   margin:0 auto;
     position:absolute;
 }
- .explore:hover span {
+ .arrow:hover {
      padding-bottom: 1rem; 
      z-index: 8;
+     cursor:pointer;
 }
-.explore:hover span:after{
-    opacity: 1;
-
-   right:0;
-}
+.explore:hover .arrow:after{
+    opacity:1;
+    right:0;}
 .show{
-      display:none;  
+    display:none;  
 }
+.arrow{
+    font-size: 2rem;} 
 button{
     border-radius: 2rem;
     background-color: linear-gradient(30deg, --var-primary-color-105, rgb(192, 150, 150));
     font-family: Arial, Helvetica, sans-serif;
     cursor:pointer;
-    font-size: 1rem;
-}
-.arrow{
-    font-size: 2rem;
- 
+    font-size: 1rem;}
+
+        .Myshop{
+            display: flex;
+            justify-content:space-around;
+        }
     
-} */
+/* MAIN & ARTICLE */
+
+main{display:flex;
+flex-wrap: wrap;
+flex:0 0 0 1;}
+
+
+article{
+    background-color: var(--var-primary-color-103);
+    color:aliceblue;
+    border-radius: 2rem;
+flex:0 0 100%;
+overflow: hidden;
+
+display:flex;
+
+justify-content: space-between;
+position:relative;
+box-sizing:border-box;
+display:flex;
+width: 50rem;}
+
+article h2{
+    margin:0 auto;
+    padding:0;
+}
+article p{
+    margin:0;
+    padding:0;
+}
+img{
+    
+    
+}
+
+
+
+
+
+
+
+
+
