--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* general */
 *{
     font-family: Arial, Helvetica, sans-serif;
   
@@ -27,13 +28,20 @@ header{
   color: aliceblue;
   
 }
-nav{
+/* serach and submit */
+.search{display: flex;
+justify-content: center;}
+
+input{width: 100%;}
+.title-section{display:flex;
+justify-content: space-between;}
+/* nav{
 width:100%;
-justify-self: center;
+justify-self: scenter;
 display:flex;
 justify-content: center;
 border-radius: 3rem;;
-background-color: var(--var-primary-color-103);
+background-color: var(--var-primary-color-103); */
 
 }
 h1{margin:0;
@@ -43,7 +51,7 @@ h1{margin:0;
 h2{
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
-    padding-bottom:9rem;
+   
    
 }
 
@@ -52,6 +60,8 @@ h2{
 .text{
     align-self: center;
 }
+
+
 
 
 
